# ecr_grpo_agent

./: README.md  pyproject.toml
configs/: alfworld_hf_lora_placeholder.json  hf_lora_synthetic_placeholder.json  long_complex_nonlocal_no_oracle.json  smoke.json  smoke_evidence_no_oracle.json  smoke_nonlocal_no_oracle.json
docs/: ecr_grpo_compressed_summary.md  ecr_grpo_paper_structure.md  ecr_grpo_research_proposal.md  ecr_grpo_teacher_report.md  stage_a_result_interpretation.md
runs/baseline_check/: comparison.csv
runs/baseline_check/dependency/: config.json  credit_assignments.jsonl  eval_metrics.csv  robustness_sweep.csv  train_events.jsonl  train_metrics.csv  train_steps.jsonl
runs/baseline_check/recency/: config.json  credit_assignments.jsonl  eval_metrics.csv  robustness_sweep.csv  train_events.jsonl  train_metrics.csv  train_steps.jsonl
runs/baseline_check/trajectory/: config.json  credit_assignments.jsonl  (+5 more)
runs/nonlocal_smoke/: aggregate_by_kernel.csv  sweep_summary.csv
runs/smoke/: config.json  eval_metrics.csv  robustness_sweep.csv  train_metrics.csv
runs/smoke_evidence_no_oracle/: config.json  eval_metrics.csv  robustness_sweep.csv  train_metrics.csv
runs/sweep_aggregate_smoke/: aggregate_by_kernel.csv  sweep_summary.csv
runs/sweep_smoke_test/: sweep_summary.csv
scripts/: run_smoke.ps1  summarize_results.py
src/ecr_grpo/: advantages.py  analyze_credit.py  attribution.py  buffers.py  credit_kernels.py  eval.py  hf_policy.py  io.py  policies.py  rollout.py  run_baselines.py  run_sweeps.py  trainer.py  types.py
tests/: test_core.py
(+50 files in other folders)
