[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecr-grpo-agent"
version = "0.1.0"
description = "Event-Conditioned Credit Refill GRPO for asynchronous long-horizon LLM agents."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
hf = [
  "torch",
  "transformers>=4.40",
  "peft>=0.10",
  "accelerate",
]
alfworld = [
  "alfworld",
  "pyyaml",
]
all = [
  "torch",
  "transformers>=4.40",
  "peft>=0.10",
  "accelerate",
  "alfworld",
  "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
